--- a/server/package.json
+++ b/server/package.json
@@ -2,14 +2,15 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "proxy": "http://localhost:8000",
   "scripts": {
     "start": "nodemon server.js"
   },
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.6.0"
   }
 }
