--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  "proxy": "http://localhost:8000",
   "scripts": {
     "start": "nodemon server.js"
   },
