--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.27.0",
-    "mongodb": "^3.6.0"
+    "mongodb": "^3.6.0",
+    "nodemon": "^2.0.4"
   }
 }
